# scratch

./: README.md  pull_all.sh
dev/phyloflow/: Dockerfile  run.sh
dev/pybamm/: Dockerfile  run.sh
docker/: Dockerfile  man.txt
docker/PyBamm_apt/: Dockerfile  run.sh
docker/PyBamm_brew/: Dockerfile  man.txt  run.sh
jax_idaklu/: CMakeLists.txt  setup.py
jax_idaklu/lib/: cpu_ops.cc  idaklu.h  kernel_helpers.h  kernels.h  pybind11_kernel_helpers.h
jax_idaklu/src/idaklu_jax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jax_idaklu/src/idaklujax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jax_idaklu/src/kepler_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jaxpybamm/: defining_new_jax_primitives.py  defining_new_jax_primitives2.py  demo1.py  explore_jax.py  idaklu_solver.py  jax_pybamm.py  jax_pybamm2.py  jax_pybamm3.py  jax_pybamm3_test.py  lowering.cpp  new_jax.py  new_jax2.py  new_jax3.py  new_jax4.py  new_jax5.py  new_jax5_simple.py  new_jax6.py  new_jax7.py  numpyro_test.py  simple_sample.py  test.py  test2.py  test3a.py  test4a.py  test5.py
jaxpybamm/idaklu_jax/: cpu_ops.cpython-311-darwin.so_ol1
jaxpybamm/old/: jax_pybamm2.py  jax_pybamm3.py  jax_pybamm4.py  simple_sample.py  test.py  test2.py  test3.py  test4a.py  test5.py
phyloflow/: README.md  run_dev_stack.sh  run_stack.sh
phyloflow/backend/: app.py  events.py  package.json
phyloflow/nodemapper/: Dockerfile  (+4 more)
pybamm/: FindSUNDIALS.cmake  casadi_solver.cpp  common.hpp  compile  compile.py  install_KLU_Sundials.py  nvector_info.txt
react-diagrams-demo/: Dockerfile  README.md
(+61 files in other folders)
